fix: Correção de bugs e redução de overengineer